welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:3: error: type mismatch;
 found   : Int(100)
 required: Boolean
	if (90 < n <=100 || 190 < n <= 200)
                     ^